<resources>
    <string name="app_name">movie_app</string>
    <string name="preText">The most popular movies of</string>
    <string name="yearPreText">year</string>
    <string name="submitBtn">Submit</string>
    <string name="movieNumber">movieNumber</string>
    <string name="posterImage">posterImage</string>
    <string name="backdropImage">backdropImage</string>

    <string name="title">Title</string>
    <string name="release">Release:</string>
    <string name="releaseDate">ReleaseDate</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
</resources>
