<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/preText"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/preText" />

            <EditText
                android:id="@+id/yearTextInput"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/yearPreText"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#84E4CA"
                android:text="@string/submitBtn" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMovieList"
            android:layout_width="match_parent"
            android:layout_height="458dp"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="338dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>